# nuscenes-cleanup

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
cleanup_types/: __init__.py  interpolated_annotation.py  sample_data_with_annotations.py  scene_with_frames.py
notebooks/: cleanup-nuscenes.ipynb  nuscenes_tutorial.ipynb
nuscenes_types/: __init__.py  asserts.py  attribute.py  calibrated_sensor.py  category.py  ego_pose.py  instance.py  lidarseg.py  log.py  map.py  sample.py  sample_annotation.py  sample_data.py  scene.py  sensor.py  visibility.py
