[tool.poetry]
name = "nuscenes-cleanup"
version = "0.1.0"
description = ""
authors = ["Chanwut (Mick) Kittivorawong <chanwutk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.4.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
