[tool.poetry]
name = "nuscenes-cleanup"
version = "0.1.0"
description = ""
authors = ["Chanwut (Mick) Kittivorawong <chanwutk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.4.2"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
nuscenes-devkit = "^1.1.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
